# Depo

./: depo  entry.py  flake.nix  pyproject.toml  shell.nix
config/themes/: style.qss
src/depo/: __init__.py  colorschema.py  config.py  core.py  exceptions.py  gui.py  main_window.py  stylesheet.py  utils.py  wgt_split.py  window.py
src/depo_gui/: __init__.py  item.py  item_thumbnail.py  main_window.py  stylesheet.py  test.py  theme.py
tests/: conftest.py  test_depo_core.py
