[project]
name = "depo"
version = "0.1.0"
description = ""
authors = [
    {name = "darqfleet",email = "darqfleet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic (>=2.11.9,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
